# nat

natb/: collection.json  main.py  models.py  pyproject.toml  query_testing.graphql  workspace.db
natb/api/: router.py
natb/core/: config.py  db.py  graphql_config.py
natb/workspace_management/: router.py  schema.py
natf/: index.html  package-lock.json  package.json
natf/src/: App.jsx  apollo-client.js  main.jsx
natf/src/componenets/: AutosyncSettings.jsx  EditableText.jsx  Note.jsx  NoteBlock.jsx  NoteModal.jsx  SortableNotes.jsx  WorkspaceTabs.jsx
natf/src/hooks/: autosync.js  localstorage.js  useEditable.js  useNoteData.js  workspaceManagement.js
natfv2/: index.html  package-lock.json  package.json
natfv2/src/: App.jsx  index.css
natfv2/src/components/: ImportExport.jsx  NoteBlock.jsx  NoteBlockList.jsx  NoteItem.jsx  NoteModal.jsx  SortableBlock.jsx  SortableNote.jsx  TrelloBoard.jsx  WorkspaceList.jsx  WorkspaceView.jsx
natfv2/src/graphql/: client.js  queries.js
natgb/: go.mod  main.go  readme.md  todo.db
natgb/database/: database.go
natgb/handlers/: handlers.go
natgb/models/: models.go
natgb/repositories/: interfaces.go  note_repositoy.go  noteblock_repository.go  workspace_repository.go
